--- a/html_advanced/0-index.html
+++ b/html_advanced/0-index.html
@@ -1,6 +1,3 @@
-<!-- Doctype HTML5 -->
 <!DOCTYPE html>
-<!-- Lowercase is also valid -->
-<!doctype html>
-<html lang="english" dir="ltr">
-
+<html lang="en" dir="ltr">
+</html>
