--- a/html_advanced/1-index.html
+++ b/html_advanced/1-index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<head>
+</head>
+<body>
+</body>
 </html>
-<meta charset="utf-8">
-<meta name="google-site-verification" content="verification_token">
+
