--- a/html_advanced/3-index.html
+++ b/html_advanced/3-index.html
@@ -9,10 +9,8 @@
   <link rel="icon" href="./favicon.png" type="image/png" />
 </head>
 <body>
-<header>This is my header<header/>
-		<main>
-        This is where I put my content
-    </main>
-    <footer>This is the footer of my page</footer>
+  <header>Header</header>
+  <main>Main content</main>
+  <footer>Footer</footer>
 </body>
 </html>
