--- a/html_advanced/article.html
+++ b/html_advanced/article.html
@@ -10,8 +10,10 @@
 </head>
 <body>
   <header>Header</header>
-  <main>Main content</main>
+  <main>
+Main content
   <aside>aside</aside>
+  </main>
   <footer>Footer</footer>
 </body>
 </html>
