--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -14,23 +14,23 @@
     <section>Hero section</section>
     <section>Services section</section>
     <section>
-	    Works section
-            <article>Work 1</article>
-            <article>Work 2</article>
-	    <article>Work 3</article>
+      Works section
+      <article>Work 1</article>
+      <article>Work 2</article>
+      <article>Work 3</article>
     </section>
     <section>About section</section>
     <section>
-	    Latest news section
-            <article>article 1</article>
-            <article>article 2</article>
-	    <article>article 3</article>
+      Latest news section
+      <article>Article 1</article>
+      <article>Article 2</article>
+      <article>Article 3</article>
     </section>
     <section>
-	    Testimonials section
-            <article>Testimonal 1</article>
-            <article>Tertimonal 2</article>
-            <article>Testimonial 3</article>
+      Testimonials section
+      <article>Testimonial 1</article>
+      <article>Testimonial 2</article>
+      <article>Testimonial 3</article>
     </section>
     <section>Contact section</section>
   </main>
