--- a/html_advanced/14-index.html
+++ b/html_advanced/14-index.html
@@ -9,9 +9,9 @@
   <link rel="icon" href="./favicon.png" type="image/png" />
 </head>
 <body>
-	</header>
-	<span>Techium</span>
-	  <nav></nav>
+  <header>
+    <span>Techium</span>
+    <nav></nav>
   </header>
   <main>
     <h1>Homepage</h1>
