--- a/html_advanced/22-index.html
+++ b/html_advanced/22-index.html
@@ -15,7 +15,7 @@
     <div>
       <div><a href="/"><span>Techium</span></a></div>
       <nav>
-<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="#services">Services</a>
         <a href="#works">Works</a>
         <a href="#about">About</a>
@@ -34,12 +34,12 @@
     <section>
       <div>
         <h2>We help you build your brand!</h2>
-	<a href="#">Get started</a>
+        <a href="#">Get started</a>
       </div>
     </section>
     <br>
     <!-- Services section -->
-    <section>
+    <section id="services">
       <div>
         <header>
           <h2>Services</h2>
@@ -57,7 +57,7 @@
     </section>
     <br>
     <!-- Works section -->
-    <section>
+    <section id="works">
       <div>
         <header>
           <h2>Works</h2>
@@ -86,12 +86,12 @@
           <h3>How we work</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
         </div>
-	<a href="abouthtml">Learn more about us</a> 
+        <a href="about.html">Learn more about us</a>
       </div>
     </section>
     <br>
     <!-- Latest news section -->
-    <section>
+    <section id="latest_news">
       <div>
         <header>
           <h2>Latest news</h2>
@@ -117,7 +117,7 @@
     </section>
     <br>
     <!-- Testimonials section -->
-    <section>
+    <section id="testimonials">
       <div>
         <header>
           <h2>Testimonials</h2>
@@ -132,7 +132,7 @@
     </section>
     <br>
     <!-- Contact section -->
-    <section>
+    <section id="contact">
       <div>
         <header>
           <h2>Contact</h2>
@@ -141,18 +141,18 @@
         <div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
         </div>
-	<a href="contact.html">Get in touch</a>
+        <a href="contact.html">Get in touch</a>
       </div>
     </section>
   </main>
   <br>
   <!-- Footer -->
-<footer>
-<div>
-	<a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
-	<a href="https://twitter.com/holbertonschool">Twitter</a>
-	<a href="https://www.instagram.com/holbertonschool/">Instagram</a>
-</div>
-</footer>
+  <footer>
+    <div>
+      <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
+      <a href="https://twitter.com/holbertonschool">Twitter</a>
+      <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
+    </div>
+  </footer>
 </body>
 </html>
