--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -64,9 +64,9 @@
           <p>Take a look in our portfolio</p>
         </header>
         <div>
-          <article><h3>Interior Design</h3></article>
-          <article><h3>Web Development</h3></article>
-          <article><h3>Personal Brand</h3></article>
+          <article><h3><a href="#">Interior Design</a></h3></article>
+	  <article><h3><a href="#">Web Development</a></h3></article>
+	  <article><h3><a href="#">Personal Brand</a></h3></article>
         </div>
       </div>
     </section>
@@ -94,7 +94,7 @@
     <section id="latest_news">
       <div>
         <header>
-          <h2>Latest news</h2>
+		<h2><a href="#">Latest news</a></h2>
         </header>
         <div>
           <article>
