--- a/html_advanced/25-index.html
+++ b/html_advanced/25-index.html
@@ -157,12 +157,12 @@
 	    <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
     <ul>
     </div>
-    </div>
+    <div>
     <ul>
 	    <li href="#">Terms of Use</li>
 	    <li href="#">Privacy Policy</li>
 	    <li href="#">Cookie Policy</li>
-    <ul>
+    </ul>
     </div>
   </footer>
 </body>
