--- a/html_advanced/30-styleguide.html
+++ b/html_advanced/30-styleguide.html
@@ -73,6 +73,7 @@
     <section>
 	    <header>
 		    <h2>Blockquotes</h2>
+	</header>
 	    <div>
 		    <h3>Inline quote</h3>
 				    <p>Stay hungry. Stay foolish.</p>
