--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -173,6 +173,7 @@
   <br>
   <!-- Footer -->
   <footer>
+	   <img alt="Techium logo" src="logo-black.png" width="160" height="40">
 	  <address> 234 Washington Street<br>Urbana,Illinois</address>	  
     <div>
     <ul>
