--- a/responsive_design/02-1-index.html
+++ b/responsive_design/02-1-index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='02-1-styles.css'>
+    <link rel='stylesheet' href='01-styles.css'>
   </head>
   <body>
     <!– Header –>
@@ -143,7 +143,7 @@
                 <article class="card-work">
                   <div class="card-outer">
                     <div class="card-image">
-                      <img src="images/pic-work-02.jpg" alt="">
+                      <img src="images/pic-work-02.jpg.jpg" alt="">
                     </div>
                     <div class="card-inner">
                       <h3 class="card-title"><a href="#">Web Development</a></h3>
@@ -177,7 +177,7 @@
           <div class="section-body">
             <div class="row">
               <div class="col-1-2">
-                <img src="images/about-us.jpg" alt="" width="460" height="460">
+                <img src="images/pic-about-01.jpg" alt="" width="460" height="460">
               </div>
               <div class="col-1-2">
                 <h3>Who are we</h3>
@@ -250,7 +250,7 @@
             <ul class="row">
               <li class="col-1-3">
                 <article class="card-testimonial">
-                  <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100" class="card-avatar">
+                  <img src="images/img_vid_2.png" alt="Yuri Y. avatar" width="100" height="100" class="card-avatar">
                   <blockquote class="card-quote">
                     <p>I am completely blown away. Thanks to Techium, we’ve just launched our 5th website!
                       <cite>Yuri Y.</cite>
@@ -260,7 +260,7 @@
               </li>
               <li class="col-1-3">
                 <article class="card-testimonial">
-                  <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100" class="card-avatar">
+                  <img src="images/img_vid_3.png" alt="Dorrie S. avatar" width="100" height="100" class="card-avatar">
                   <blockquote class="card-quote">
                     <p>Thank you so much for your help. Techium company is awesome!
                       <cite>Dorrie S.</cite>
@@ -270,7 +270,7 @@
               </li>
               <li class="col-1-3">
                 <article class="card-testimonial">
-                  <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100" class="card-avatar">
+                  <img src="images/pic-person-01 bis.jpg" alt="Sven H. avatar" width="100" height="100" class="card-avatar">
                   <blockquote class="card-quote">
                     <p>I love your system. Definitely worth the investment. I’d be lost without Techium company.
                       <cite>Sven H.</cite>
