--- a/accessibility/skip-links/01-article.html
+++ b/accessibility/skip-links/01-article.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="01-styles.css">
 </head>
-
+<!-- Skip links -->
 <body class="article-page">
   <nav aria-label="Skip links">
     <ul class="off-screen">
