--- a/accessibility/fix-a11y/04-index.html
+++ b/accessibility/fix-a11y/04-index.html
@@ -45,7 +45,7 @@
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class="col-6"><img class="img-fluid" src="about-img.png" alt="About image"></div>
+          <div class="col-6"><img class="img-fluid" src="about-img.png" alt=""></div>
           <div class="col-5">
             <h6>About Me</h6>
             <h1>Personal Details</h1>
