--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -155,9 +155,9 @@
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
                 <div class="input-group">
-                  <input class="form-control" type="text" name="email" placeholder="Enter Email Address" id="email">
+                  <input class="form-control" type="email" name="email"  id="email">
                   <label for="email" class="visually-hidden">Email Address</label>
-                  <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
+                  <div class="input-group-btn"><a class="button" type="submit">Validate</a></div>
                 </div>
               </form>
             </div>
