--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -154,10 +154,10 @@
               <h4>Newsletter</h4>
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
-                <label for="email" class="visually-hidden">Email Address</label>
                 <div class="input-group">
-                  <input class="form-control" type="email" name="email"  id="email">
-                  <div class="input-group-btn"><a class="button" type="submit">Validate</a></div>
+                  <label for="email" class="visually-hidden"></label>
+                  <input class="form-control" id="email" type="email" name="email" autocomplete="email" required aria-required="true">
+                  <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
             </div>
@@ -166,7 +166,10 @@
             <div class="footer-widget">
               <h4>Follow Me</h4>
               <p>Let us be social</p>
-              <div><a href="#"><i class="facebook-icon"></i></a><a href="#"><i class="twitter-icon"></i></a></div>
+              <div>
+                <a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a>
+                <a href="#" aria-label="Twitter"><i class="twitter-icon"></i></a>
+              </div>
             </div>
           </div>
         </div>
