--- a/accessibility/fix-a11y/08-index.html
+++ b/accessibility/fix-a11y/08-index.html
@@ -8,7 +8,8 @@
     </style>
   </head>
   <body>
-    <div class="header"> <h1>Homepage</h1>
+    <div class="header"> 
+      <h1>Homepage</h1>
     
       <div>
         <div>
