--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -8,11 +8,13 @@
     </style>
   </head>
   <body>
-    <div class="header"> 
+    <header>
+      <h1>Homepage</h1>
+    </header>
       <div>
         <div>
           <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
-          <div class="nav">
+          <nav>
             <div>
               <p><a href="#">Home</a></p>
               <p><a href="#">About</a></p>
@@ -21,12 +23,12 @@
               <p><a href="#">Pricing</a></p>
               <p><a href="#">Pages</a></p>
               <p><a href="#">Contact</a></p>
+            </nav>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <h1>Homepage</h1>
     <div class="section">
       <div class="container">
         <div class="row">
@@ -142,7 +144,7 @@
         </div>
       </div>
     </div>
-    <div class="footer">
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col-5">
@@ -175,6 +177,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
